# RegistersFileParser

./: CMakeLists.txt  README.md  converter_linux.cpp  converter_windows.cpp
Headers/: RegisterFileConverter.h  RegisterFileParser.h
Sources/: RegisterFileConverter.cpp  RegisterFileParser.cpp
